fix: Align the date picker (#59)
* fix: Align the date picker

* Add more specific styling to the day picker component only

--- a/indico_themes_canonical/static/css/_default/registration.css
+++ b/indico_themes_canonical/static/css/_default/registration.css
@@ -145,6 +145,10 @@ button.SingleDatePickerInput_calendarIcon {
   padding-left: 1rem;
 }
 
+.regform-section .DayPicker ul {
+  padding-left: 0;
+}
+
 .ui.form .field > label {
   font-size: 1rem;
   font-weight: 400;
